--- a/static/assets/css/bootstrap.css
+++ b/static/assets/css/bootstrap.css
@@ -5871,10 +5871,10 @@ button.close {
 }
 .modal {
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  top: 10%;
+  /*right: 0;*/
+  /*bottom: 0;*/
+  /*left: 0;*/
   z-index: 1050;
   display: none;
   overflow: hidden;
@@ -5948,6 +5948,8 @@ button.close {
 .modal-body {
   position: relative;
   padding: 15px;
+  overflow:scroll;
+  max-height: 400px;
 }
 .modal-footer {
   padding: 15px;
