--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <title>KeyPin - Find your lost items!</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../static/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="../static/assets/css/stylish-portfolio.css" rel="stylesheet">
@@ -23,9 +23,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="../static/assets/js/bootstrap.min.js"></script>
-
-    <!-- PureCSS -->
-    <!--<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">-->
 
     <!-- Custom Fonts -->
     <link href="../static/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -42,43 +39,39 @@
     <script src="../static/assets/js/firebase.js"></script>
     <script src="../static/assets/js/main.js"></script>
 
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <script>
     $(document).ready(function () {
         $('select').material_select();
     });
-    $(document).ready(function() {
+    $(document).ready(function () {
         $('.modal-trigger').leanModal();
     });
 
-     function readChat() {
-        console.log("I AM READING");
-        ref.child("items/"+document.getElementById("id_entry").value+"/messages").on("child_added", function (snapshot) {
-                console.log(snapshot.val());
-                var div = document.getElementById('chat-list');
-                div.innerHTML += "<p>" + snapshot.val() + "</p>"
-            });  
-     }
 
-     function sendMsg(){
-        var msgref = ref.child("items/"+document.getElementById("id_entry").value +"/messages").push();
+    function readChat() {
+        console.log("I AM READING");
+        document.getElementById("modal-title-home").innerHTML = "Chat for " + document.getElementById("id_entry").value;
+
+        var $cont = $('.modal-body');
+        ref.child("items/" + document.getElementById("id_entry").value + "/messages").on("child_added", function (snapshot) {
+            console.log(snapshot.val());
+            var div = document.getElementById('chat-list');
+            div.innerHTML += "<p>" + snapshot.val() + "</p>"
+            $cont[0].scrollTop = $cont[0].scrollHeight;
+        });
+    }
+
+    function sendMsg() {
+        var msgref = ref.child("items/" + document.getElementById("id_entry").value + "/messages").push();
         msgref.set("anon: " + document.getElementById('msg-entry').value)
         document.getElementById('msg-entry').value = "";
-     }
-
+    }
 </script>
 
 <script>
-    function clearChat(){
+    function clearChat() {
         var div = document.getElementById('chat-list');
         div.innerHTML = "";
     }
@@ -87,42 +80,38 @@
         var id = document.getElementById("id_entry").value;
 
         ref.child("items/" + id).once("value", function (snapshot) {
-            if (snapshot.exists() && id!=''){
-                ref.child("items/"+document.getElementById("id_entry").value+"/messages").off();
+            if (snapshot.exists() && id != '') {
+                ref.child("items/" + document.getElementById("id_entry").value + "/messages").off();
                 clearChat();
-                $('#modal1').modal({show:true});
+                $('#modal1').modal({show: true});
                 readChat();
             } else {
                 alert("id does not exist.");
             }
         });
-
     }
-
-    
-
 </script>
+
 <body>
-
-
-    <div class="modal" id="modal1">
-        <div class="modal-dialog" id="modal1">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h4 class="modal-title">Modal title</h4>
+<div class="modal" id="modal1">
+    <div class="modal-dialog" id="modal1">
+        <div class="modal-header">
+            <button type="btn" class="close" data-dismiss="modal" aria-hidden="true">Close</button>
+            <h4 class="modal-title" id="modal-title-home">Chat</h4>
+        </div>
+        <div class="modal-body" id="chat-body">
+            <div id="chat-list"></div>
+        </div>
+        <div class="modal-footer">
+            <div class="input-field col s6 offset-s3">
+                <input id="msg-entry" type="text" class="validate" onkeydown="if (event.keyCode == 13)
+                        sendMsg()" autofocus>
+                <label for="msg-entry"><span class="black-text">Enter your message</span></label>
             </div>
-            <div class="modal-body">
-              <div id = "chat-list"></div>
-            </div>
-            <div class="modal-footer">
-                <div class="input-field col s6 offset-s3">
-                        <input id="msg-entry" type="text" class="validate">
-                        <label for="msg-entry"><span class="black-text">Enter your message</span></label>
-                    </div>
-              <div class="btn btn-primary" onclick="sendMsg()">Send Message</div>
-            </div>
+            <div class="btn btn-primary" onclick="sendMsg()">Send Message</div>
         </div>
     </div>
+</div>
 
 <!-- Header -->
 <header id="top" class="header">
@@ -133,19 +122,22 @@
             <div class="row center-align">
                 <div class="centered">
                     <div class="input-field col s6 offset-s3">
-                        <input id="id_entry" type="text" class="validate" onkeydown = "if (event.keyCode == 13)
+                        <input id="id_entry" type="text" class="validate" onkeydown="if (event.keyCode == 13)
                         checkItem()">
                         <label for="id_entry"><span class="black-text">id number</span></label>
                     </div>
                 </div>
             </div>
             <div>
-                <button type="button" id="submit_button" class="btn waves-effect waves-light" onclick="checkItem()">Submit</button>
+                <button type="button" id="submit_button" class="btn waves-effect waves-light" onclick="checkItem()">
+                    Submit
+                </button>
                 <a href="#about" class="btn waves-effect waves-light">About</a>
             </div>
             <div><br></div>
             <div>
-                <button type="button" class="btn blue waves-effect waves-light" onclick="fblogin()">Facebook Login</button>
+                <button type="button" class="btn blue waves-effect waves-light" onclick="fblogin()">Facebook Login
+                </button>
             </div>
         </div>
     </div>
