--- a/templates/owner.html
+++ b/templates/owner.html
@@ -17,7 +17,7 @@
     <!-- Custom CSS -->
     <link href="../static/assets/css/stylish-portfolio.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/assets/css/main.css">
-    <link rel="stylesheet" href="../static/assets/css/style.css">
+    <!--<link rel="stylesheet" href="../static/assets/css/style.css">-->
 
 
     <!-- jQuery -->
@@ -33,6 +33,13 @@
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="../static/assets/css/materialize.min.css">
+
+
+    <!-- Animation -->
+    <link href="../static/assets/css/style.css" rel="stylesheet" type="text/css" media="screen"/>
+
+    <!--Filestack-->
+    <script type="text/javascript" src="//api.filestackapi.com/filestack.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="../static/assets/js/materialize.min.js"></script>
