--- a/templates/owner.html
+++ b/templates/owner.html
@@ -34,7 +34,6 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="../static/assets/css/materialize.min.css">
 
-
     <!-- Animation -->
     <link href="../static/assets/css/style.css" rel="stylesheet" type="text/css" media="screen"/>
 
@@ -51,7 +50,7 @@
 </head>
 
 <a href = "index.html">
-    <button type="button" class="btn btn-lg btn-dark home-button">KeyPin</button>
+    <button type="button" class="btn btn-dark home-button">KeyPin</button>
 </a>
 
 <script>
