--- a/templates/owner.html
+++ b/templates/owner.html
@@ -49,7 +49,7 @@
 
 </head>
 
-<a href = "index.html">
+<a href = "/">
     <button type="button" class="btn btn-dark home-button">KeyPin</button>
 </a>
 
