image url hidden

--- a/templates/owner.html
+++ b/templates/owner.html
@@ -17,8 +17,8 @@
     <!-- Custom CSS -->
     <link href="../static/assets/css/stylish-portfolio.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/assets/css/main.css">
-    <!--<link rel="stylesheet" href="../static/assets/css/style.css">-->
-
+    <link rel="stylesheet" href="../static/assets/css/style.css">
+<!---->
 
     <!-- jQuery -->
     <script src="../static/assets/js/jquery.js"></script>
@@ -190,7 +190,7 @@
                                 <label for="item_id_form">ID</label>
                                 <input id="item_id_form" type="text" placeholder="ID" class="item-input">
                             </div>
-                            <div class="pure-control-group">
+                            <div class="pure-control-group hidden">
                                 <label for="url_form">Image URL</label>
                                 <input id="url_form" type="text" placeholder="URL" class="item-input">
                             </div>
