--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,8 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="../static/assets/js/bootstrap.min.js"></script>
 
+    <link href="../static/assets/css/style.css" rel="stylesheet" type="text/css" media="screen"/>
+
     <!-- Custom Fonts -->
     <link href="../static/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
