image url un hidden

--- a/templates/owner.html
+++ b/templates/owner.html
@@ -190,7 +190,7 @@
                                 <label for="item_id_form">ID</label>
                                 <input id="item_id_form" type="text" placeholder="ID" class="item-input">
                             </div>
-                            <div class="pure-control-group hidden">
+                            <div class="pure-control-group">
                                 <label for="url_form">Image URL</label>
                                 <input id="url_form" type="text" placeholder="URL" class="item-input">
                             </div>
