--- a/templates/index.html
+++ b/templates/index.html
@@ -29,13 +29,14 @@
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
           rel="stylesheet" type="text/css">
 
-    <link href="../static/assets/css/style.css" rel="stylesheet" type="text/css" media="screen"/>
-
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="../static/assets/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
     <script src="../static/assets/js/materialize.min.js"></script>
+
+    <!-- Animation -->
+    <link href="../static/assets/css/style.css" rel="stylesheet" type="text/css" media="screen"/>
 
     <!--Firebase-->
     <script src="../static/assets/js/firebase.js"></script>
