better menu font

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,9 +125,9 @@
             <div class="row center-align">
                 <div class="centered">
                     <div class="input-field col s6 offset-s3">
-                        <input id="id_entry" type="text" class="validate" onkeydown="if (event.keyCode == 13)
+                        <input id="id_entry" type="text" class="validate" style="font-size: large" onkeydown="if (event.keyCode == 13)
                         checkItem()">
-                        <label for="id_entry"><span class="black-text">id number</span></label>
+                        <label for="id_entry"><span class="black-text h4">id number</span></label>
                     </div>
                 </div>
             </div>
