home button is fancy now

--- a/templates/owner.html
+++ b/templates/owner.html
@@ -48,7 +48,7 @@
 </head>
 
 <a href = "/">
-    <button type="button" class="btn btn-dark home-button">KeyPin</button>
+    <button type="button" class="btn btn-dark home-button waves-effect waves-light">KeyPin</button>
 </a>
 
 <script>
