--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
 
     <title>KeyPin - Find your lost items!</title>
 
+    <link rel="icon" href="../static/assets/img/close.png">
+
+
     <!-- Bootstrap Core CSS -->
     <link href="../static/assets/css/bootstrap.css" rel="stylesheet">
 
